JNI Macos + Linux

--- a/.gitignore
+++ b/.gitignore
@@ -244,3 +244,9 @@ gradle-app.setting
 .classpath
 
 # End of https://www.toptal.com/developers/gitignore/api/git,macos,java,gradle,intellij,linux,windows
+.settings/
+.vscode/
+
+*.out
+*.gch
+*.o
