JNI Related Updates. Added build scripts for building VES shared library on Linux.

--- a/.gitignore
+++ b/.gitignore
@@ -245,8 +245,11 @@ gradle-app.setting
 
 # End of https://www.toptal.com/developers/gitignore/api/git,macos,java,gradle,intellij,linux,windows
 .settings/
-.vscode/
+.vscode/settings.json
+.vscode/c_cpp_properties.json
+.vscode/launch.json
 
 *.out
 *.gch
 *.o
+/orig/ForwardSolver/.vscode/
