--- a/forwardsolver/.vscode/tasks.json
+++ b/forwardsolver/.vscode/tasks.json
@@ -1,93 +1,135 @@
 {
   "tasks": [
     {
-      "type": "cppbuild",
-      "label": "Build 'ves' dynamic library (macOS)",
-      "command": "/usr/bin/clang",
-      "args": [
-        "${workspaceFolder}/orig/src/VESER.c",
-        "-O3",
-        "-x",
-        "c",
-        "-arch",
-        "x86_64",
-        "-fPIC",
-        "-dynamiclib",
-        "-fvisibility=default",
-        "-I",
-        "${workspaceFolder}/orig/src/headers",
-        "-install_name",
-        "libves.dylib",
-        "-o",
-        "${workspaceFolder}/src/main/lib/libves.dylib"
-      ],
+      "type": "shell",
+      "label": "forwardsolver (JNI-ready)",
+      "dependsOn": "ves",
+      "group": "build",
+      "detail": "forwardsolver.dll / libforwardsolver.dylib / libforwardsolver.so",
       "options": {
         "cwd": "${workspaceFolder}"
       },
-      "problemMatcher": [
-        "$gcc"
-      ],
-      "detail": "macOS x86_64"
+      "windows": {
+        "command": "cl.exe",
+        "args": [
+          "/O2",
+          "/MD",
+          "/LD",
+          "${workspaceFolder}\\src\\main\\c\\forwardsolver.c",
+          "/I\"${config:java.home}\\include\"",
+          "/I\"${config:java.home}\\include\\win32\"",
+          "/Fe\"${workspaceFolder}\\src\\main\\lib\\forwardsolver.dll\""
+        ],
+        "problemMatcher": [
+          "$msCompile"
+        ]
+      },
+      "osx": {
+        "command": "/usr/bin/clang",
+        "args": [
+          "-O3",
+          "-arch",
+          "x86_64",
+          "-x",
+          "c",
+          "-fPIC",
+          "-dynamiclib",
+          "${workspaceFolder}/src/main/c/forwardsolver.c",
+          "-I",
+          "${config:java.home}/include",
+          "-I",
+          "${config:java.home}/include/darwin",
+          "-rpath",
+          "@loader_path",
+          "-o",
+          "${workspaceFolder}/src/main/lib/libforwardsolver.dylib"
+        ],
+        "problemMatcher": [
+          "$gcc"
+        ]
+      },
+      "linux": {
+        "command": "/usr/bin/gcc",
+        "args": [
+          "-O3",
+          "-x",
+          "c",
+          "-fPIC",
+          "-shared",
+          "${workspaceFolder}/src/main/c/forwardsolver.c",
+          "-I",
+          "${config:java.home}/include",
+          "-I",
+          "${config:java.home}/include/linux",
+          "-ldl",
+          "-Wl,-rpath=.",
+          "-o",
+          "${workspaceFolder}/src/main/lib/libforwardsolver.so"
+        ],
+        "problemMatcher": [
+          "$gcc"
+        ]
+      }
     },
     {
-      "type": "cppbuild",
-      "label": "Build 'ves' dynamic library (Linux)",
-      "command": "/usr/bin/gcc",
-      "args": [
-        "${workspaceFolder}/orig/src/VESER.c",
-        "-O3",
-        "-x",
-        "c",
-        "-fPIC",
-        "-shared",
-        "-fvisibility=default",
-        "-I",
-        "${workspaceFolder}/orig/src/headers",
-        "-o",
-        "${workspaceFolder}/src/main/lib/libves.so"
-      ],
+      "type": "shell",
+      "label": "ves",
       "options": {
         "cwd": "${workspaceFolder}"
       },
-      "problemMatcher": [
-        "$gcc"
-      ],
-      "detail": "GNU/Linux x86_64"
-    },
-    {
-      "type": "cppbuild",
-      "label": "Build JNI-ready wrapper",
-      "command": "/usr/bin/clang",
-      "dependsOn": "Build 'ves' dynamic library (macOS)",
-      "args": [
-        "-O3",
-        "-arch",
-        "x86_64",
-        "-x",
-        "c",
-        "-fPIC",
-        "-dynamiclib",
-        "${workspaceFolder}/src/main/c/forwardsolver.c",
-        "-I",
-        "~/Library/Java/JavaVirtualMachines/openjdk-17.0.1/Contents/Home/include",
-        "-I",
-        "~/Library/Java/JavaVirtualMachines/openjdk-17.0.1/Contents/Home/include/darwin",
-        "-rpath",
-        "@loader_path",
-        "-o",
-        "${workspaceFolder}/src/main/lib/libforwardsolver.dylib"
-      ],
-      "options": {
-        "cwd": "${workspaceFolder}"
+      "group": "build",
+      "detail": "ves.dll / libves.dylib / libves.so",
+      "windows": {
+        "command": "cl.exe",
+        "args": [
+          "/O2",
+          "/MD",
+          "/LD",
+          "${workspaceFolder}\\orig\\src\\VESER.c",
+          "/Fe\"${workspaceFolder}\\src\\main\\lib\\ves.dll\""
+        ],
+        "problemMatcher": [
+          "$msCompile"
+        ]
       },
-      "problemMatcher": [
-        "$gcc"
-      ],
-      "group": {
-        "kind": "build",
-        "isDefault": true
+      "osx": {
+        "command": "/usr/bin/clang",
+        "args": [
+          "${workspaceFolder}/orig/src/VESER.c",
+          "-O3",
+          "-x",
+          "c",
+          "-arch",
+          "x86_64",
+          "-fPIC",
+          "-dynamiclib",
+          "-fvisibility=default",
+          "-install_name",
+          "libves.dylib",
+          "-o",
+          "${workspaceFolder}/src/main/lib/libves.dylib"
+        ],
+        "problemMatcher": [
+          "$gcc"
+        ]
       },
-      "detail": "macOS x86_64"
+      "linux": {
+        "command": "/usr/bin/gcc",
+        "args": [
+          "${workspaceFolder}/orig/src/VESER.c",
+          "-O3",
+          "-x",
+          "c",
+          "-fPIC",
+          "-shared",
+          "-fvisibility=default",
+          "-o",
+          "${workspaceFolder}/src/main/lib/libves.so"
+        ],
+        "problemMatcher": [
+          "$gcc"
+        ]
+      }
     }
   ],
   "version": "2.0.0"
