--- a/.forwardsolver/.vscode/settings.json
+++ b/.forwardsolver/.vscode/settings.json
@@ -5,7 +5,7 @@
     "TEST.C": "c"
   },
   "java.configuration.updateBuildConfiguration": "interactive",
-  "_java.home": "~/Library/Java/JavaVirtualMachines/openjdk-17.0.1/Contents/Home",
+  "java.home": "~/Library/Java/JavaVirtualMachines/openjdk-17.0.1/Contents/Home",
   "__java.home": "/usr/lib/jvm/java-17-openjdk-amd64",
   "___java.home": "C:\\Users\\vadim\\.jdks\\openjdk-17.0.1"
 }
