--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,8 @@ ext {
     junitVersion = '5.8.1'
 }
 
-sourceCompatibility = '16'
-targetCompatibility = '16'
+sourceCompatibility = '17'
+targetCompatibility = '17'
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
@@ -39,7 +39,7 @@ dependencies {
 
 test {
     useJUnitPlatform()
-    systemProperty "java.library.path", file("${project(":forwardsolver").projectDir}/src/main/lib/").absolutePath
+    systemProperty "java.library.path", file("orig/ForwardSolver/build/lib/").absolutePath
 }
 
 //test.dependsOn ':forwardsolver:linkDebug'
