--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,8 @@ ext {
     junitVersion = '5.8.1'
 }
 
-sourceCompatibility = '17'
-targetCompatibility = '17'
+sourceCompatibility = '16'
+targetCompatibility = '16'
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
@@ -37,7 +37,7 @@ javafx {
 dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
-    implementation("eu.hansolo.fx:charts:17.0.1")
+    //implementation("eu.hansolo.fx:charts:17.0.1")
 }
 
 test {
