DLL error handling improved, build.gradle updated to run with DLL, icon changed.

--- a/build.gradle
+++ b/build.gradle
@@ -105,5 +105,9 @@ task forwardSolver(type: Exec) {
             file("${workingDir}/lib/forwardsolver.lib").delete()
         }
     }
+}
 
+tasks.withType(JavaExec) {
+    allJvmArgs = ["-Djava.library.path=${projectDir}/lib"]
+    dependsOn forwardSolver
 }
