Добавлен простой алгоритм стартовой модели

--- a/orig/ForwardSolver/ForwardSolver.vcxproj
+++ b/orig/ForwardSolver/ForwardSolver.vcxproj
@@ -20,10 +20,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MisfitFunctions.cpp" />
+    <ClCompile Include="Inversion.cpp" />
     <ClCompile Include="TEST.C" />
     <ClCompile Include="VESER.C" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Inversion.h" />
     <ClInclude Include="MisfitFunctions.h" />
     <ClInclude Include="VES.H" />
   </ItemGroup>
