--- a/orig/ForwardSolver.Test/ForwardSolver.Test.vcxproj
+++ b/orig/ForwardSolver.Test/ForwardSolver.Test.vcxproj
@@ -34,8 +34,10 @@
   <PropertyGroup Label="UserMacros" />
   <ItemGroup>
     <ClInclude Include="pch.h" />
+    <ClInclude Include="VesData.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Inversion.test.cpp" />
     <ClCompile Include="MisfitFunctions.test.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -43,6 +45,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="VesData.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ForwardSolver\ForwardSolver.vcxproj">
