--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,10 @@ repositories {
 
 def currentOS = DefaultNativePlatform.currentOperatingSystem
 def currentArch = DefaultNativePlatform.currentArchitecture
+def userDir = System.getProperty("user.home")
 
 ext {
-    junitVersion = '5.8.1'
+    junitVersion = '5.8.2'
 }
 
 sourceCompatibility = '17'
@@ -35,6 +36,9 @@ application {
 }
 
 javafx {
+    if (currentOS.isMacOsX() && currentArch.name.contains("arm")) {
+        sdk = "${userDir}/Library/Java/javafx-sdk-18"
+    }
     version = "17"
     modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
 }
@@ -52,7 +56,7 @@ def libPrefix = currentOS.isWindows() ? "" : "lib"
 def libExt = currentOS.isMacOsX() ? "dylib" : currentOS.isLinux() ? "so" : "dll"
 
 def compiler = currentOS.isMacOsX() ? "/usr/bin/clang" : currentOS.isLinux() ? "/usr/bin/gcc" : "clang"
-def arch = currentOS.isMacOsX() ? ["-arch", "x86_64"] : []
+def arch = currentOS.isMacOsX() ? ["-arch", "x86_64", "-arch", "arm64"] : []
 def optimization = "-O3"
 def pic = currentOS.isWindows() ? "" : "-fPIC"
 def shared = currentOS.isMacOsX() ? "-dynamiclib" : "-shared"
