--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.11'
     id "com.google.osdetector" version "1.7.0"
+    id "org.beryx.jlink" version "2.24.4"
 }
 
 group 'ru.nucodelabs'
@@ -38,8 +39,8 @@ tasks.withType(JavaCompile) {
 }
 
 application {
-    mainModule = 'ru.nucodelabs.gem'
-    mainClass = 'ru.nucodelabs.gem.App'
+    mainModule = 'ru.nucodelabs'
+    mainClass = 'ru.nucodelabs.gem.StartGemApplication'
 }
 
 javafx {
