--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,12 @@
+import io.github.fvarrui.javapackager.gradle.PackageTask
 import org.gradle.internal.jvm.Jvm
 import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform
+
+buildscript {
+    dependencies {
+        classpath 'io.github.fvarrui:javapackager:1.6.3'
+    }
+}
 
 plugins {
     id 'java'
@@ -7,6 +14,8 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.0.11'
     id "com.google.osdetector" version "1.7.0"
 }
+
+apply plugin: 'io.github.fvarrui.javapackager.plugin'
 
 group 'ru.nucodelabs'
 version '1.0-SNAPSHOT'
@@ -164,4 +173,21 @@ test {
 tasks.withType(JavaExec) {
     dependsOn forwardSolver, misfitFunctions
     allJvmArgs = ["-Djava.library.path=" + file("${projectDir}/lib").absolutePath]
+}
+
+task packageGemApp(type: PackageTask, dependsOn: build) {
+    mainClass = 'ru.nucodelabs.gem.core.StartGemApplication'
+    bundleJre = true
+    generateInstaller = false
+    additionalResources = [
+            file("lib/${libPrefix}forwardsolver.${libExt}"),
+            file("lib/${libPrefix}misfit.${libExt}")
+    ]
+    macConfig {
+        icnsFile = file("src/main/resources/img/gem.icns")
+    }
+    useResourcesAsWorkingDir = true
+    vmArgs = ["-Djava.library.path=."]
+    applicationName = "GEM"
+    version = "0.1"
 }
