Translation to English added (but not full)

--- a/src/main/resources/ru/nucodelabs/gem/UI.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI.properties
@@ -1,1 +1,38 @@
+version=ver. PREVIEW
+# Меню
 file=File
+edit=Edit
+help=Help
+open=Open
+close=Close
+create=New
+askImportOption=Add to current section or create new one?
+addToNew=Create new section (in new window)
+addToCurrent=Add to current
+# Панели
+pseudoSection=Pseudo-section
+geoSection=Section
+ves=VES Curves
+modelTable=Model
+misfit=Misfit
+experimentalTable=Experimental Table
+# Таблица экспериментальных данных
+experimentalAB_2=AB/2 (m)
+experimentalMN_2=MN/2 (m)
+experimentalResistanceApparent=Apparent resistance ρₐ (Ohm‧m)
+experimentalAmperage=Amperage (mA)
+experimentalVoltage=Voltage (mV)
+experimentalErrorResistanceApparent=Error ρₐ (%)
+# Таблица экспериментальных данных
+modelPower=Power (m)
+modelResistanceApparent=Resistance ρ (Ohm‧m)
+modelPolarization=Polarization (%)
+view=View
+legend=Chart legends
+zoomIn=+
+zoomOut=-
+left=←
+right=→
+up=↑
+down=↓
+inverse=Inverse Solve
