--- a/src/main/resources/ru/nucodelabs/gem/UI.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI.properties
@@ -37,3 +37,8 @@ up=↑
 down=↓
 inverse=Inverse Solve
 cancel=Cancel
+importOptions=Import options
+welcomeToGem=Welcome to GEM
+welcomeText=You can open SONET-compatible file for VES interpretation
+openEXPFile=Open EXP file
+useSystemMenu=Use system menu
