--- a/src/main/resources/ru/nucodelabs/gem/UI.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI.properties
@@ -42,3 +42,11 @@ welcomeToGem=Welcome to GEM
 welcomeText=You can open SONET-compatible file for VES interpretation
 openEXPFile=Open EXP file
 useSystemMenu=Use system menu
+unableToDrawChart=Unable to draw chart
+noLib=Library not found
+fileError=An error occurred while opening the file
+error=Error
+compatibilityMode=Compatibility Mode
+EXPSTTMismatch=STT and EXP files lines counts are unequal
+minimalDataWillBeDisplayed=Minimal possible amount of data will be displayed
+fileNotFound=File not found
