Multi-picket mode added

--- a/src/main/resources/ru/nucodelabs/gem/UI.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI.properties
@@ -50,3 +50,4 @@ compatibilityMode=Compatibility Mode
 EXPSTTMismatch=STT and EXP files lines counts are unequal
 minimalDataWillBeDisplayed=Minimal possible amount of data will be displayed
 fileNotFound=File not found
+picket=Picket
