--- a/build.gradle
+++ b/build.gradle
@@ -89,7 +89,7 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.2")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.2")
 
-    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.5'
 }
 
 task forwardSolver(type: Exec) {
