Updates in controller and charts

--- a/src/main/resources/ru/nucodelabs/gem/UI.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI.properties
@@ -11,6 +11,11 @@ newWindow=New section (in new window)
 pseudoSection=Pseudo-section
 geoSection=Section
 ves=VES Curves
+expCurve=Experimental Curve
+expCurveUpper=Error Upper Bound
+expCurveLower=Error Lower Bound
+theorCurve=Theoretical Curve
+modCurve=Model Chart
 modelTable=Model
 misfit=Misfit
 experimentalTable=Experimental Table
